tests/compile-fail/generated/derives-span-Eq, PartialEq-enum.stderr
error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-Eq, PartialEq-enum.rs:16:6
   |
16 |    A(Error)
   |      ^^^^^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `&Error`
